Changes to CMakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,6 @@ include(common/GLFW.cmake)
 
 #--- Subprojects
 #add_subdirectory(vector)
-add_subdirectory(raytrace)
+#add_subdirectory(raytrace)
+add_subdirectory(rsaterize)
 
